# nx-ai-plugin

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  project.json  pyproject.toml  tsconfig.base.json
.github/: ci-settings.yml
.github/workflows/: ci.yml  docs.yml  nx-main.yml
.husky/: pre-commit  pre-push
dependency-graph/static/: environment.js
docs/: gen_doc_stubs.py  getting-start.md  index.md  summary.md
getting-start/: index.html
libs/node/core/os/: README.md  eslint.config.mjs  jest.config.ts  package.json  project.json
nx-ai-plugin/: README.md  generators.json  jest.config.ts  package.json  project.json
nx-ai-plugin-e2e/: jest.config.ts  project.json
nx-ai-plugin-e2e/src/: nx-ai-plugin.spec.ts
nx-ai-plugin/src/: index.ts
nx-ai-plugin/src/generators/agent-generator/: agent-generator.spec.ts  agent-generator.ts  schema.d.ts  schema.json
nx-ai-plugin/src/generators/repo-setup/: repo-setup.spec.ts  repo-setup.ts  schema.d.ts  schema.json
nx-ai-plugin/src/generators/setup-credentials/: schema.d.ts  schema.json  setup-credentials.spec.ts  setup-credentials.ts
reference/: index.html
reference/CONTRIBUTING/: index.html
reference/docs/: index.html
reference/docs/getting-start/: index.html
reference/docs/summary/: index.html
reference/docs/usage-examples/: index.html
reference/nx-ai-plugin/: index.html
search/: search_index.json
summary/: index.html
tools/scripts/: start-local-registry.ts
usage-examples/: index.html
(+5 files in other folders)
