[project]
name = "nx-ai-plugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Caffarello",email = "fabio.caffarello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
