[project]
name = "nx-ai-plugin"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Caffarello",email = "fabio.caffarello@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
package-mode = false
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.5"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings = "^0.28.2"
mkdocs-autorefs = "^1.4.0"
mkdocstrings-python = "^1.16.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-include-markdown-plugin = "^7.1.4"
mkdocs-swagger-ui-tag = "^0.6.11"

